# irulescan

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  _config.yml  melange.yaml
.github/workflows/: release-apiserver.yaml  release.yaml  scheduled-test.yaml_disabled  test.yaml  update-gh-pages.yaml
assets/css/: style.scss
files/: Dockerfile  Dockerfile.apiserver  Dockerfile.devcontainer  apiserver.py  apko-apiserver.yaml  apko-base.yaml  apko-default.yaml  apko-mcpserver.yaml  good-practices.md  irule_expressions_tcl8.4.20.patch  irulescan_tcl8.4.20.patch  melange-libtcl-irulescan.yaml  melange.yaml  scandir.sh
gh-pages/: README.md
irulescan/: Cargo.toml
irulescan/src/: build.rs  lib.rs  main.rs  rstcl.rs
signkeys/: README.md  cosign.pub  cosign.pub.asc  melange.rsa.pub.asc
src/: apiserver.rs  build.rs  lib.rs  main.rs  mcpserver.rs  mytcl.h  rstcl.rs  tcl.rs
src/apiserver/: rapidoc_res.rs
src/mcpserver/: goodpractices_res.rs
tests/: Makefile  basic.json  basic.yaml  run-tests.sh  test.sh
tests/basic/: README.md  all.f5irule  dangerous.tcl.expected  dangerous.tcl.json  dangerous.tcl.stdin.json  dangerous.txt  irulescan.json  irulescan_exclude_empty.json  irulescan_nowarn.json  ok.tcl  ok.tcl.json  warning.tcl  warning.tcl.expected  warning.tcl.json
tests/bigip/: class.irule  class.irule.expected  class.irule.json  conditionals.irule.json  conditionals.tcl  conditionals.tcl.expected  deprecated.irule.json  deprecated.tcl  deprecated.tcl.expected  table.irule  table.irule.expected  table.irule.json  tmconf.irule.expected  tmconf.irule.json  tmconf.tcl  unsafe.irule.json  unsafe.tcl  unsafe.tcl.expected  unsupported.irule  unsupported.irule.json  unsupported.tcl.expected  when.irule  when.irule.expected  when.irule.json  when.tcl
tests/bigip/syntax/: switch_regex.tcl  switch_regex.tcl.json  test1.irule  test1.irule.expected  test1.irule.json  test2.irule  test2.irule.json  test3.irule  test3.irule.expected  test3.irule.json  test4.irule  test4.irule.expected  test4.irule.json  test5.irule  test5.irule.expected  test5.irule.json
tests/issues/: 7.tcl
tests/tcl/: after.tcl  after.tcl.expected  all.tcl  all.tcl.expected  catch.tcl  catch.tcl.expected  foreach.tcl  foreach.tcl.expected  if.tcl  if.tcl.expected  regexp_regsub.tcl  regexp_regsub.tcl.expected  switch.tcl  switch.tcl.expected  unset.tcl  unset.tcl.expected  while.tcl  while.tcl.expected
