[package]

name = "irulescan"
version = "3.0.0"
authors = ["Simon Kowallik <github@simonkowallik.com>"]

build = "src/build.rs"

edition = "2024"

[build-dependencies]
bindgen = "0.71.1"

[dependencies]
enum_primitive = "0.1"
num = "0.4"
fancy-regex = "0"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde_json = "1"
json_diff_ng = "0"
libc = "0.2"
# Web server dependencies
axum = "0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0", features = ["fs", "trace"] }
axum-extra = { version = "0", features = ["typed-header", "multipart"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
tempfile = "3"
# OpenAPI / Swagger UI dependencies
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
utoipa-swagger-ui-vendored = "0"

[[bin]]

name = "irulescan"
