[package]

name = "irulescan"
version = "3.0.0"
authors = ["Simon Kowallik <github@simonkowallik.com>"]

build = "src/build.rs"

edition = "2024"

[build-dependencies]
bindgen = "0.71.1"

[dependencies]
enum_primitive = "0.1.1"
num = "0.4.3"
fancy-regex = "0.14.0"
clap = { version = "4.5.37", features = ["derive"] }
walkdir = "2.5.0"
serde_json = "1.0.140"
json_diff_ng = "0.6.0"
libc = "0.2.172"
# Web server dependencies
axum = "0.8.4"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "multipart"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tempfile = "3.19.1"
# OpenAPI / Swagger UI dependencies
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum", "vendored"] }
utoipa-swagger-ui-vendored = "0.1.2"
# MCP - bleeding edge (dev) to support streamable http transport
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "57e14c56e85deebc434eb11e4866e3f5ec77d906", features = ["transport-streamable-http-server"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
tokio-util = "0.7.15"

[[bin]]

name = "irulescan"
