[package]

name = "irulescan"
version = "3.0.0"
authors = ["Simon Kowallik <github@simonkowallik.com>"]

build = "src/build.rs"

edition = "2024"

[build-dependencies]
bindgen = "0.71.1"

[dependencies]
enum_primitive = "0.1.1"
num = "0.4.3"
fancy-regex = "0.14.0"
clap = { version = "4.5.37", features = ["derive"] }
walkdir = "2.5.0"
serde_json = "1.0.140"
json_diff_ng = "0.6.0"
libc = "0.2.172"
# Web server dependencies
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tempfile = "3.19.1"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
# MCP - bleeding edge (dev) to support streamable http transport and other relevant features
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "db03f63e76b5b32f65d34a1bd08ae56dab595f60", features = ["transport-streamable-http-server", "transport-worker"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
tokio-util = "0.7.15"
once_cell = "1.21.3"

[[bin]]

name = "irulescan"
