[package]

name = "irulescan"
version = "2.0.0"
authors = ["Simon Kowallik <github@simonkowallik.com>"]

build = "src/build.rs"

edition = "2021"

[build-dependencies]
bindgen = "= 0.69.4"

[dependencies]
enum_primitive = "0.1"
num = "0.4"
fancy-regex = "0"
json = "0"
clap = { version = "4", features = ["derive"] }
walkdir = "2"

[[bin]]

name = "irulescan"
